<?xml version="1.0" encoding="utf-8"?>

<!--  
Course: MAD9132 - Android Application Development
App: RGB-A Tool
@author Natha Bisson (biss0180)
--> 

<resources>

    <string name="app_name">RGB-A Tool</string>
    <string name="action_about">Nathan Bisson (biss0180)</string>
    <string name="alpha">Transparency (Alpha)</string>
    <string name="black">Black</string>
	<string name="blue">Blue</string>
	<string name="cyan">Cyan</string>
	<string name="green">Green</string>
	<string name="magenta">Magenta</string>
	<string name="red">Red</string>
	<string name="white">White</string>
	<string name="yellow">Yellow</string>

</resources>
