<!-- 
Course: MAD9132 - Android Application Development
App: RGB-A Tool
@author Natha Bisson (biss0180)
 -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.algonquincollege.biss0180.rgbatool.MainActivity" 
    android:id="@+id/mainLayout">

    <TextView
        android:id="@+id/textRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/pickerRed"
        android:layout_marginRight="18dp"
        android:text="@string/red"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/green"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/textBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/pickerBlue"
        android:layout_marginRight="16dp"
        android:text="@string/blue"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <NumberPicker
        android:id="@+id/pickerRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/pickerGreen"
        android:layout_below="@+id/textRed" />
    
    <NumberPicker
        android:id="@+id/pickerGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textGreen"
        android:layout_centerHorizontal="true"
        />
    
    <NumberPicker
        android:id="@+id/pickerBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/pickerGreen"
        android:layout_marginRight="14dp" />
    
    <TextView
        android:id="@+id/textAlpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/seekBarAlpha"
        android:layout_centerVertical="true"
        android:text="@string/alpha" />
    
    <SeekBar
        android:id="@+id/seekBarAlpha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAlpha"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
